CallMD/src/objects/Member__c.object
<CustomObject>
    <fields>
        <fullName>Address_Line1__c</fullName>
        <label>Address Line1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_Line2__c</fullName>
        <label>Address Line2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>YEAR(TODAY()) - YEAR(DateofBirth__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Programs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>B2B Programs</label>
        <referenceTo>Programs__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BIN__c</fullName>
        <label>BIN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BenefitsProvider__c</fullName>
        <label>Benefits Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>Benefit services of America</fullName>
                </value>
                <value>
                    <fullName>CallMD</fullName>
                </value>
                <value>
                    <fullName>CallMD sample</fullName>
                </value>
                <value>
                    <fullName>Car Spa</fullName>
                </value>
                <value>
                    <fullName>Careington</fullName>
                </value>
                <value>
                    <fullName>Competitive Health</fullName>
                </value>
                <value>
                    <fullName>eDoc America</fullName>
                </value>
                <value>
                    <fullName>Family Care</fullName>
                </value>
                <value>
                    <fullName>Future Benefits Corportation</fullName>
                </value>
                <value>
                    <fullName>Med Watch</fullName>
                </value>
                <value>
                    <fullName>National Benefit Builders.Inc</fullName>
                </value>
                <value>
                    <fullName>Ncs Medical Group</fullName>
                </value>
                <value>
                    <fullName>Pine Creek Medical Center</fullName>
                </value>
                <value>
                    <fullName>Professional Center Pharmacy</fullName>
                </value>
                <value>
                    <fullName>SBAofAmerica(National Administration Co.Inc)</fullName>
                </value>
                <value>
                    <fullName>Telerian Inc</fullName>
                </value>
                <value>
                    <fullName>UHPOA</fullName>
                </value>
                <value>
                    <fullName>US Health</fullName>
                </value>
                <value>
                    <fullName>Visionary Healthcare Solutions</fullName>
                </value>
                <value>
                    <fullName>White Glove Health</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CallMDUserName__c</fullName>
        <label>CallMDUserName</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Phone__c</fullName>
        <label>Carrier Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <label>Cell Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirm_Member_Pin__c</fullName>
        <label>Confirm Member Pin</label>
        <length>10</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>D2C</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>B2B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateofBirth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deactivated_Date__c</fullName>
        <label>Deactivated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName__c&amp;&quot; &quot;&amp;LastName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fullfillment_Mailed_Date__c</fullName>
        <label>Fullfillment Mailed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_id__c</fullName>
        <label>Group id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IVR_UI_Flow__c</fullName>
        <label>IVR/UI Flow</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Update Consultation</fullName>
                </value>
                <value>
                    <fullName>New Subscription</fullName>
                </value>
                <value>
                    <fullName>New Consultation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurance_Carrier__c</fullName>
        <label>Insurance Carrier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Disposition__c</fullName>
        <label>Last Disposition</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Pin__c</fullName>
        <label>Member Pin</label>
        <length>10</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Member_Type__c</fullName>
        <label>Member Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Dependent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <displayFormat>MID#{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PCN__c</fullName>
        <label>PCN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packages__c</fullName>
        <label>Packages</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Parent_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient_Id__c</fullName>
        <label>Patient Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pin__c</fullName>
        <label>Pin</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Status__c</fullName>
        <label>Program Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>InActive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>American Independent Business Coalition</fullName>
                </value>
                <value>
                    <fullName>USHealth</fullName>
                </value>
                <value>
                    <fullName>USHealth Group</fullName>
                </value>
                <value>
                    <fullName>Benefit Services of America</fullName>
                </value>
                <value>
                    <fullName>OnCall Doctor</fullName>
                </value>
                <value>
                    <fullName>CallMD 24/7 Family Annual</fullName>
                </value>
                <value>
                    <fullName>CallMD 24/7 Family Monthly</fullName>
                </value>
                <value>
                    <fullName>Call BAA</fullName>
                </value>
                <value>
                    <fullName>CallMD Complimentary</fullName>
                </value>
                <value>
                    <fullName>CallMD One Time Consultation</fullName>
                </value>
                <value>
                    <fullName>Doctors</fullName>
                </value>
                <value>
                    <fullName>Family Care</fullName>
                </value>
                <value>
                    <fullName>Visionary</fullName>
                </value>
                <value>
                    <fullName>CallMD Sample</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>American Health Advantage True Care Discount Medical</fullName>
                </value>
                <value>
                    <fullName>American Seniors Association Discount Plan</fullName>
                </value>
                <value>
                    <fullName>Benefit Services Of America-Test</fullName>
                </value>
                <value>
                    <fullName>CiProduct</fullName>
                </value>
                <value>
                    <fullName>Health Insurance Innovations-Extra Care Packag</fullName>
                </value>
                <value>
                    <fullName>Med Shield Discount Plan</fullName>
                </value>
                <value>
                    <fullName>Southwest Advantage discount Plan</fullName>
                </value>
                <value>
                    <fullName>USH-PADD</fullName>
                </value>
                <value>
                    <fullName>Wellness Sheild-CallMD,Labs And Imaging</fullName>
                </value>
                <value>
                    <fullName>Wellness Shield-CallMD</fullName>
                </value>
                <value>
                    <fullName>CareExpress</fullName>
                </value>
                <value>
                    <fullName>Colonial Life</fullName>
                </value>
                <value>
                    <fullName>EnergyPlus</fullName>
                </value>
                <value>
                    <fullName>GlobalLife</fullName>
                </value>
                <value>
                    <fullName>LifeStyle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Programs__c</fullName>
        <label>Programs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <label>Provider</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>InActive</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verification_Code__c</fullName>
        <label>Verification Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>ZipCode</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isMemberPin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMemberPin</label>
        <type>Checkbox</type>
    </fields>
    <label>Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CallMD_User_Account_Number</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(REGEX(CallMDUserName__c,&quot;[0-9]+&quot;))</errorConditionFormula>
        <errorDisplayField>CallMDUserName__c</errorDisplayField>
        <errorMessage>CallMD Username must be numeric</errorMessage>
    </validationRules>
</CustomObject>